--- a/TamuCareerCloset/config/database.yml
+++ b/TamuCareerCloset/config/database.yml
@@ -10,8 +10,8 @@ default: &default
   database: cc_database
   pool: 5
   timeout: 5000
-  username: ubuntu
-  password: cfleitasdatabase
+  username: NHB
+  password:
 
 development:
   <<: *default
