--- a/TamuCareerCloset/config/database.yml
+++ b/TamuCareerCloset/config/database.yml
@@ -10,8 +10,8 @@ default: &default
   database: cc_database
   pool: 5
   timeout: 5000
-  username: NHB
-  password:
+  username: ubuntu
+  password: cfleitasdatabase
 
 development:
   <<: *default
